--- a/docs/docs/rest-api/public/api/v2/schema/AppDefinition.json
+++ b/docs/docs/rest-api/public/api/v2/schema/AppDefinition.json
@@ -293,6 +293,40 @@
       "description": "The amount of memory in MB that is needed for the application per instance.",
       "minimum": 0
     },
+    "ipAddress": {
+      "type": "object",
+      "description": "If an application definition includes the 'ipAddress' field, then Marathon will request a per-task IP from Mesos. A separate ports/portMappings configuration is then disallowed.",
+      "properties": {
+        "groups": {
+          "type": "array",
+          "description": "Array of network groups. One IP address can belong to zero or more network groups. The idea is that containers can only reach containers with which they share at least one network group.",
+          "items": {
+            "type": "string",
+            "description": "The name of the network group"
+          }
+        },
+        "labels": {
+          "type": "object",
+          "description": "Key value pair for meta data on that network interface.",
+          "properties": {},
+          "additionalProperties": true
+        }
+      }
+    },
+    "labels": {
+      "additionalProperties": {
+        "type": "string"
+      },
+      "type": "object"
+    },
+    "maxLaunchDelaySeconds": {
+      "minimum": 0,
+      "type": "integer"
+    },
+    "mem": {
+      "minimum": 0,
+      "type": "number"
+    },
     "ports": {
       "type": "array",
       "description": "An array of required port resources on the agent host. The number of items in the array determines how many dynamic ports are allocated for every task. For every port that is zero, a globally unique (cluster-wide) port is assigned and provided as part of the app definition to be used in load balancing definitions.",
